<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Screen"
    tools:context=".ui.detail.DetailFragment">

    <TextView
        android:id="@+id/txvTitleEarthquake"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppinsextrabold"
        android:textSize="16sp"
        android:text="M 1.3 - 10km SSW of Idyllwild, CA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imvPlaceHolderGPS"
        app:layout_constraintTop_toTopOf="@+id/imvPlaceHolderGPS" />

    <TextView
        android:id="@+id/txvReviewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/reviewed"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imvPlaceHolderGPS"
        app:layout_constraintTop_toBottomOf="@+id/txvTitleEarthquake" />

    <ImageView
        android:id="@+id/imvPlaceHolderGPS"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imvEarthShake"
        android:layout_width="375dp"
        android:layout_height="375dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="-100dp"
        android:src="@drawable/earth_shake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvPlaceHolderGPS" />

    <androidx.cardview.widget.CardView
        android:id="@+id/crdCardViewFD"
        style="@style/MainCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-135dp"
        android:layout_marginBottom="-40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvEarthShake" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnMoreInfoFD"
                style="@style/PrimaryButton"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/main_gradient"
                android:text="@string/moreInfo"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imvKindMagnitudeFD" />


            <TextView
                android:id="@+id/txvTitleAdditionalInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppinsextrabold"
                android:text="@string/addInfo"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvHourEarthquake" />

            <TextView
                android:id="@+id/txvHourFD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppinslight"
                android:text="@string/hour"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/imvColourClock"
                app:layout_constraintStart_toStartOf="@+id/imvColourClock"
                app:layout_constraintTop_toBottomOf="@+id/imvColourClock" />

            <TextView
                android:id="@+id/txvEarthquakeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppinslight"
                android:text="ID: ci11408890"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imvEarthquakeID"
                app:layout_constraintStart_toEndOf="@+id/imvEarthquakeID"
                app:layout_constraintTop_toTopOf="@+id/imvEarthquakeID" />

            <TextView
                android:id="@+id/txvEarthquakeCords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppinslight"
                android:text="Lat: -116.7776667 Lon: 33.6633333"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imvEarthquakeCords"
                app:layout_constraintStart_toEndOf="@+id/imvEarthquakeID"
                app:layout_constraintTop_toTopOf="@+id/imvEarthquakeCords" />

            <TextView
                android:id="@+id/txvKindMagnitudeFD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppinslight"
                android:text="Tipo de Magnitud: ML"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imvKindMagnitudeFD"
                app:layout_constraintStart_toEndOf="@+id/imvEarthquakeID"
                app:layout_constraintTop_toTopOf="@+id/imvKindMagnitudeFD" />

            <TextView
                android:id="@+id/txvHourEarthquake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinssemibold"
                android:text="20:10"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/imvColourClock"
                app:layout_constraintStart_toStartOf="@+id/imvColourClock"
                app:layout_constraintTop_toBottomOf="@+id/txvHourFD" />

            <TextView
                android:id="@+id/txvDateFD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppinslight"
                android:text="@string/date"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/imvCalendar"
                app:layout_constraintStart_toStartOf="@+id/imvCalendar"
                app:layout_constraintTop_toBottomOf="@+id/imvColourClock" />

            <TextView
                android:id="@+id/txvDateEarthquake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinssemibold"
                android:text="14/01/14"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/imvCalendar"
                app:layout_constraintStart_toStartOf="@+id/imvCalendar"
                app:layout_constraintTop_toBottomOf="@+id/txvDateFD" />

            <TextView
                android:id="@+id/txvTsunamiFD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppinslight"
                android:text="@string/tsunami"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/imvTsunami"
                app:layout_constraintStart_toStartOf="@+id/imvTsunami"
                app:layout_constraintTop_toBottomOf="@+id/imvColourClock" />

            <TextView
                android:id="@+id/txvTsunamiEarthquake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinssemibold"
                android:text="0"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/imvTsunami"
                app:layout_constraintStart_toStartOf="@+id/imvTsunami"
                app:layout_constraintTop_toBottomOf="@+id/txvTsunamiFD" />

            <TextView
                android:id="@+id/txvMagnitudeFD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppinslight"
                android:text="@string/magnitude"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/imvMagnitudeFD"
                app:layout_constraintStart_toStartOf="@+id/imvMagnitudeFD"
                app:layout_constraintTop_toBottomOf="@+id/imvColourClock" />

            <TextView
                android:id="@+id/txvMagnitudeEarthquake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinssemibold"
                android:text="2.1"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/imvMagnitudeFD"
                app:layout_constraintStart_toStartOf="@+id/imvMagnitudeFD"
                app:layout_constraintTop_toBottomOf="@+id/txvMagnitudeFD" />

            <ImageView
                android:id="@+id/imvColourClock"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/colour_clock"
                app:layout_constraintEnd_toStartOf="@+id/imvCalendar"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imvEarthquakeID"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/earthquake"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvTitleAdditionalInfo" />

            <ImageView
                android:id="@+id/imvEarthquakeCords"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/compass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imvEarthquakeID" />

            <ImageView
                android:id="@+id/imvKindMagnitudeFD"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/kind_magnitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imvEarthquakeCords" />

            <ImageView
                android:id="@+id/imvCalendar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/calendar"
                app:layout_constraintEnd_toStartOf="@+id/imvTsunami"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imvColourClock"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imvTsunami"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/tsunami"
                app:layout_constraintEnd_toStartOf="@+id/imvMagnitudeFD"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imvCalendar"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imvMagnitudeFD"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/speedometer_low"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imvTsunami"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>